base/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance-checker-fe-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: attendance-checker-fe
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: attendance-checker-fe
    spec:
      containers:
      - image: scgskku/attendance-checker-fe-dev
        imagePullPolicy: Always
        name: attendance-checker-fe
        ports:
        - containerPort: 3000
