base/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attendance-checker-fe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  tls:
    - hosts:
        - dev.attendance.scg.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: dev.attendance.scg.skku.ac.kr
      http:
        paths:
          - backend:
              service:
                name: attendance-checker-fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
